<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">JustJava</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>

    <!--MainActivity.java file-->
    <string name="order_summary_whipped_cream">Add Whipped Cream ? <xliff:g id="addWhippedCream" example="true">%b</xliff:g></string>
    <string name="order_summary_chocolate">Add Chocolate ? <xliff:g id="addChocolate" example="true">%b</xliff:g></string>
    <string name="order_summary_name">Name: <xliff:g id="name" example="Dana">%s</xliff:g></string>
    <string name="order_summary_quantity">Quantity: <xliff:g id="quantity" example="0">%d</xliff:g></string>
    <string name="order_summary_price">Total: $<xliff:g id="price" example="$10">%d</xliff:g></string>
    <string name="thank_you">Thank You!</string>
    <string name="order_summary_email_subject">Just Java order for <xliff:g id="name" example="Dana">%s</xliff:g></string>

    <!--Toast messages-->
    <string name="less_than_1_coffee">You can\'t have less than a coffee!</string>
    <string name="more_than_100_coffees">You can\'t have more than 100 coffees!</string>
</resources>
